chore: seal linux work
Signed-off-by: GitHub <noreply@github.com>